<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="greeting" tools:keep="@string/greeting">Share your moment\nwith us!</string>
    <string name="login" tools:keep="@string/login">Login</string>
    <string name="signup" tools:keep="@string/signup">Signup</string>
    <string name="name" tools:keep="@string/name">Name</string>
    <string name="or_signup" tools:keep="@string/or_signup">or Signup</string>
    <string name="logout" tools:keep="@string/logout">Logout</string>
    <string name="cdesc_back_button" tools:keep="@string/cdesc_back_button">Back Button</string>
    <string name="cdesc_add_story_button" tools:keep="@string/cdesc_add_story_button">Add story button</string>
    <string name="cdesc_menu_button" tools:keep="@string/cdesc_menu_button">Menu button</string>
    <string name="cdesc_capture_image" tools:keep="@string/cdesc_capture_image">Capture image</string>
    <string name="cdesc_switch_camera" tools:keep="@string/cdesc_switch_camera">Switch camera</string>
    <string name="email_not_valid">"Email is not valid!"</string>
    <string name="cdesc_pick_image" tools:keep="@string/cdesc_pick_image">Pick Image</string>
    <string name="cdesc_pick_from_camera" tools:keep="@string/cdesc_pick_from_camera">Pick from camera</string>
    <string name="cdesc_pick_image_from" tools:keep="@string/cdesc_pick_image_from">Pick image from:</string>
    <string name="must_not_be_empty">"Must not be empty!"</string>
    <string name="choose_image_method">"Please choose image first!"</string>
    <string name="password_less_than_6">Password must at least 6 characters!</string>
    <string name="password_is_empty">Password enter your password first!</string>
    <string name="login_failed">"Login failed, make sure your email and password are correct!"</string>
    <string name="signup_failed">"Signup failed, try again later!"</string>
    <string name="load_stories_failed">""Failed to load data, try again later!""</string>
    <string name="post" tools:keep="@string/post">Post</string>
    <string name="image" tools:keep="@string/image">Image</string>
    <string name="caption" tools:keep="@string/caption">Caption</string>
    <string name="camera" tools:keep="@string/camera">Camera</string>
    <string name="gallery" tools:keep="@string/gallery">Gallery</string>
    <string name="pick_from_gallery" tools:keep="@string/pick_from_gallery">Pick from gallery</string>
    <string name="write_your_caption" tools:keep="@string/write_your_caption">Write your caption…</string>
    <string name="greeting2" tools:keep="@string/greeting2">Enjoy every\nmoment!</string>
    <string name="people_story" tools:keep="@string/people_story">People Story</string>
    <string name="no_story" tools:keep="@string/no_story">No story</string>
    <string name="change_language" tools:keep="@string/change_language">Change Language</string>
    <string name="failed_launch_camera">Failed to launch camera!</string>
    <string name="failed_take_picture">Failed to take picture!</string>
    <string name="cdesc_map_button">Map Button</string>
    <string name="save">Save</string>
    <string name="no_location_selected">No location selected</string>
    <string name="location">Location</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="latlon_format" translatable="false">Lat: %1$.2f Lon: %2$.2f</string>
    <string name="delete_location">Delete location</string>
</resources>