<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:keep="@layout/fragment_signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button"
            android:contentDescription="@string/cdesc_pick_image"
            android:src="@drawable/ic_arrow_back"
            android:text="@string/post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_auth"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="32dp"
            android:alpha="0"
            android:layout_marginTop="-32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_greeting"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/watermelon2_lottie" />

        <TextView
            android:id="@+id/tv_greeting"
            style="@style/TextAppearance.StoryApp.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/greeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back"
            app:layout_constraintVertical_bias="0.08" />

        <TextView
            android:id="@+id/tv_signup"
            style="@style/TextAppearance.StoryApp.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:alpha="0"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_auth" />

        <EditText
            android:id="@+id/et_name_signup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_custom_edittext"
            android:hint="@string/name"
            android:alpha="0"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup" />

        <com.ekotyoo.storyapp.ui.EmailEditText
            android:id="@+id/et_email_signup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name_signup" />

        <com.ekotyoo.storyapp.ui.PasswordEditText
            android:id="@+id/et_password_signup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:alpha="0"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_signup" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/TextAppearance.StoryApp.Button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password_signup"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>